
[TestRenderer_PageMetadata/it_should_populate_component,_url_and_version_from_the_context_and_request - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users/123",
 "version": "1.0.0"
}
---

[TestRenderer_MixedPropTypes/it_should_produce_all_metadata_fields_together_when_standard,_deferred,_optional,_once,_merge_and_scroll_props_are_combined_on_a_full_request - 1]
{
 "component": "TestComponent",
 "deferredProps": {
  "default": [
   "notifications"
  ]
 },
 "mergeProps": [
  "feed",
  "users.data"
 ],
 "onceProps": {
  "locale_key": {
   "prop": "locale"
  }
 },
 "props": {
  "feed": [
   {
    "id": 1
   }
  ],
  "locale": "en",
  "stats": "visible",
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": 1,
   "nextPage": 2,
   "pageName": "",
   "previousPage": null
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PageMetadata/it_should_propagate_preserveFragment,_clearHistory_and_encryptHistory_when_set_on_the_context - 1]
{
 "clearHistory": true,
 "component": "TestComponent",
 "encryptHistory": true,
 "preserveFragment": true,
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PageMetadata/it_should_default_preserveFragment,_clearHistory_and_encryptHistory_to_false_when_unset - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_SharedProps/it_should_list_shared_prop_keys_in_sharedProps_when_shared_props_are_provided - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "sharedProps": [
  "auth",
  "errors"
 ],
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_MixedPropTypes/it_should_omit_deferredProps_when_no_deferred_props_are_present - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_FirstLoadIgnorables/it_should_skip_optional_and_deferred_props_on_full_request_without_invoking_their_lazy_functions - 1]
{
 "component": "TestComponent",
 "deferredProps": {
  "default": [
   "def"
  ]
 },
 "props": {},
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialOnceInteraction/it_should_keep_once_prop_on_partial_request_when_its_key_is_whitelisted_despite_exceptOnceProps_listing_it - 1]
{
 "component": "TestComponent",
 "onceProps": {
  "locale_key": {
   "prop": "locale"
  }
 },
 "props": {
  "locale": "lazy-locale"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_SharedProps/it_should_keep_shared_props_independent_of_partial_whitelist_and_blacklist - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "sharedProps": [
  "auth"
 ],
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_FirstLoadIgnorables/it_should_still_include_always_and_standard_props_alongside_ignorable_props_on_full_request - 1]
{
 "component": "TestComponent",
 "deferredProps": {
  "default": [
   "def"
  ]
 },
 "props": {
  "auth": {
   "user": "Roman"
  },
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_SharedProps/it_should_not_resolve_shared_prop_values_into_Page_props_when_they_are_only_declared_as_shared - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "sharedProps": [
  "auth"
 ],
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_ConcurrentResolution/it_should_aggregate_rescued_keys_and_not_fail_when_concurrent_props_fail_with_RescueError - 1]
{
 "component": "TestComponent",
 "props": {},
 "rescuedProps": [
  "a",
  "b"
 ],
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_ResetHeader/it_should_not_affect_non-reset_props_when_some_props_are_listed_in_resetProps - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "keep"
 ],
 "props": {
  "keep": [
   "b"
  ],
  "reset_one": [
   "a"
  ]
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_SharedProps/it_should_leave_sharedProps_empty_when_no_shared_props_are_provided - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialResolution/it_should_exclude_blacklisted_props_when_partialExcept_is_non-empty - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialComponentMismatch/it_should_behave_like_a_full_render_when_partialComponent_does_not_match_the_rendered_component - 1]
{
 "component": "TestComponent",
 "deferredProps": {
  "default": [
   "deferred"
  ]
 },
 "props": {
  "email": "test@example.com",
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialResolution/it_should_rescue_multiple_failed_props_aggregating_each_key_into_rescuedProps - 1]
{
 "component": "TestComponent",
 "props": {},
 "rescuedProps": [
  "a",
  "b"
 ],
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_MixedPropTypes/it_should_keep_rescuedProps,_scrollProps_and_mergeProps_consistent_when_a_rescued_deferred_prop_coexists_with_a_scroll_prop_and_a_merge_prop_on_the_same_partial_request - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "keep",
  "users.data"
 ],
 "props": {
  "keep": [
   "a"
  ],
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "rescuedProps": [
  "rescued"
 ],
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialResolution/it_should_combine_whitelist_and_blacklist_when_both_are_present - 1]
{
 "component": "TestComponent",
 "props": {
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_MixedPropTypes/it_should_resolve_every_prop_on_a_partial_request_that_whitelists_the_parent_key_while_omitting_deferredProps_metadata - 1]
{
 "component": "TestComponent",
 "mergeProps": [
  "feed",
  "users.data"
 ],
 "onceProps": {
  "locale_key": {
   "prop": "locale"
  }
 },
 "props": {
  "feed": [
   {
    "id": 1
   }
  ],
  "locale": "en",
  "notifications": [
   "msg"
  ],
  "stats": "visible",
  "users": {
   "data": [
    "one"
   ]
  }
 },
 "scrollProps": {
  "users": {
   "currentPage": null,
   "pageName": ""
  }
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialComponentMismatch/it_should_ignore_partialExcept_blacklist_when_partialComponent_does_not_match - 1]
{
 "component": "TestComponent",
 "props": {
  "email": "test@example.com",
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_ConcurrentResolution/it_should_mix_concurrent_and_sequential_props_in_the_same_partial_request_preserving_all_values - 1]
{
 "component": "TestComponent",
 "props": {
  "con1": "con1-value",
  "con2": "con2-value",
  "seq": "seq-value"
 },
 "url": "/users",
 "version": "1.0.0"
}
---

[TestRenderer_PartialComponentMismatch/it_should_ignore_partialData_whitelist_when_partialComponent_does_not_match - 1]
{
 "component": "TestComponent",
 "props": {
  "email": "test@example.com",
  "name": "Roman"
 },
 "url": "/users",
 "version": "1.0.0"
}
---
